--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     }
   ],
   "devDependencies": {
+    "@babel/core": "^7.12.17",
     "@size-limit/preset-small-lib": "^4.9.2",
+    "babel-jest": "^26.6.3",
     "documentation": "^13.1.1",
     "husky": "^5.0.9",
     "size-limit": "^4.9.2",
